--- a/Author.iOS/packages.config
+++ b/Author.iOS/packages.config
@@ -1,20 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Acr.Support" version="2.1.0" targetFramework="xamarinios10" />
-  <package id="Acr.UserDialogs" version="7.0.1" targetFramework="xamarinios10" />
+  <package id="Acr.UserDialogs" version="7.0.4" targetFramework="xamarinios10" />
   <package id="Behaviors.Forms" version="1.4.0" targetFramework="xamarinios10" />
   <package id="BTProgressHUD" version="1.2.0.6" targetFramework="xamarinios10" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="xamarinios10" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.NETCore.Platforms" version="2.1.1" targetFramework="xamarinios10" />
+  <package id="Microsoft.NETCore.Platforms" version="2.2.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="xamarinios10" />
-  <package id="PCLCrypto" version="2.0.147" targetFramework="xamarinios10" />
-  <package id="PInvoke.BCrypt" version="0.5.155" targetFramework="xamarinios10" />
-  <package id="PInvoke.Kernel32" version="0.5.155" targetFramework="xamarinios10" />
-  <package id="PInvoke.NCrypt" version="0.5.155" targetFramework="xamarinios10" />
-  <package id="PInvoke.Windows.Core" version="0.5.155" targetFramework="xamarinios10" />
-  <package id="Splat" version="5.0.2" targetFramework="xamarinios10" />
+  <package id="PCLCrypto" version="2.1.32-alpha" targetFramework="xamarinios10" />
+  <package id="PInvoke.BCrypt" version="0.5.184" targetFramework="xamarinios10" />
+  <package id="PInvoke.Kernel32" version="0.5.184" targetFramework="xamarinios10" />
+  <package id="PInvoke.NCrypt" version="0.5.184" targetFramework="xamarinios10" />
+  <package id="PInvoke.Windows.Core" version="0.5.184" targetFramework="xamarinios10" />
+  <package id="Splat" version="7.0.1" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinios10" />
@@ -32,16 +32,17 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Linq" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Net.Http" version="4.3.3" targetFramework="xamarinios10" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="xamarinios10" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="xamarinios10" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Reflection" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="xamarinios10" />
@@ -61,7 +62,7 @@
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="Validation" version="2.4.18" targetFramework="xamarinios10" />
-  <package id="Xamarin.Auth" version="1.6.0.2" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="3.1.0.697729" targetFramework="xamarinios10" />
+  <package id="Validation" version="2.4.22" targetFramework="xamarinios10" />
+  <package id="Xamarin.Essentials" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="3.6.0.293080" targetFramework="xamarinios10" />
 </packages>
