--- a/Author.iOS/Info.plist
+++ b/Author.iOS/Info.plist
@@ -53,6 +53,21 @@
 	<string>0.1.0.0</string>
 	<key>XSLaunchImageAssets</key>
 	<string>Resources/Media.xcassets/LaunchImages.launchimage</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>Author</string>
+			<key>CFBundleURLTypes</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>otpauth</string>
+			</array>
+			<key>CFBundleURLIconFile</key>
+			<string>Icon-Small@2x</string>
+		</dict>
+	</array>
 	<key>XSAppIconAssets</key>
 	<string>Resources/Media.xcassets/AppIcons.appiconset</string>
 </dict>
