--- a/Author.macOS/Info.plist
+++ b/Author.macOS/Info.plist
@@ -28,5 +28,18 @@
 	<string>0.1.0.0</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.utilities</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>otpauth</string>
+			</array>
+			<key>CFBundleURLTypes</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>Author</string>
+		</dict>
+	</array>
 </dict>
 </plist>
