--- a/Author.iOS/Info.plist
+++ b/Author.iOS/Info.plist
@@ -26,7 +26,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>Author</string>
 	<key>CFBundleIdentifier</key>
-	<string>xyz.metaman.Author</string>
+	<string>xyz.metaman.author.ios</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>CFBundleIconFiles</key>
